[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/Settings.gd" type="Script" id=1]

[node name="Settings" type="Popup"]
visible = true
anchor_right = 0.427
anchor_bottom = 0.537
margin_right = -0.248016
margin_bottom = -0.200012
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.258824, 0.505882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 13.0
margin_right = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 407.0
margin_bottom = 309.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 407.0
margin_bottom = 14.0
text = "settings"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 407.0
margin_bottom = 22.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 407.0
margin_bottom = 40.0
text = "Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 407.0
margin_bottom = 82.0

[node name="null3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 12.0
margin_right = 12.0
margin_bottom = 26.0
text = "   "

[node name="MainVol" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 105.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MainVol"]
margin_right = 89.0
margin_bottom = 14.0
text = "Main"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MainVol"]
margin_top = 18.0
margin_right = 89.0
margin_bottom = 38.0

[node name="ButtonMainVolDown" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MainVol/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Vol -"

[node name="ButtonMainVolUp" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MainVol/HBoxContainer"]
margin_left = 45.0
margin_right = 89.0
margin_bottom = 20.0
text = "Vol +"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="null" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_top = 12.0
margin_right = 157.0
margin_bottom = 26.0
text = "            "

[node name="MusicVol" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 250.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MusicVol"]
margin_right = 89.0
margin_bottom = 14.0
text = "Music"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MusicVol"]
margin_top = 18.0
margin_right = 89.0
margin_bottom = 38.0

[node name="ButtonVolMusicDown" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MusicVol/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Vol -"

[node name="ButtonVolMusicUp" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MusicVol/HBoxContainer"]
margin_left = 45.0
margin_right = 89.0
margin_bottom = 20.0
text = "Vol +"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="null2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_top = 12.0
margin_right = 302.0
margin_bottom = 26.0
text = "            "

[node name="SFXVol" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 306.0
margin_right = 395.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/SFXVol"]
margin_right = 89.0
margin_bottom = 14.0
text = "SFX"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/SFXVol"]
margin_top = 18.0
margin_right = 89.0
margin_bottom = 38.0

[node name="ButtonVolSFXDown" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/SFXVol/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Vol -"

[node name="ButtonVolSFXUp" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/SFXVol/HBoxContainer"]
margin_left = 45.0
margin_right = 89.0
margin_bottom = 20.0
text = "Vol +"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClose" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "X"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MainVol/HBoxContainer/ButtonMainVolDown" to="." method="_on_ButtonMainVolDown_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MainVol/HBoxContainer/ButtonMainVolUp" to="." method="_on_ButtonMainVolUp_pressed"]
[connection signal="pressed" from="ButtonClose" to="." method="_on_ButtonClose_pressed"]
